[project]
name = "webhook-ops"
version = "0.1.0"
description = "Single-user webhook operations platform for reliable delivery and replay."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4,<6",
  "django-environ>=0.11,<1",
  "django>=5.2,<6",
  "djangorestframework>=3.15,<4",
  "drf-spectacular>=0.27,<1",
  "gunicorn>=22,<24",
  "psycopg[binary]>=3.2,<4",
  "redis>=5,<7",
  "requests>=2.32,<3",
  "whitenoise>=6.7,<7",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-django>=4.9,<5",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "webhook_ops.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
